# ghostline

./: .gitattributes  .gitignore  .vercelignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  setup.py  vercel.json
.github/workflows/: ci.yml  release.yml
assets/: licenses.json
benchmarks/: final-test-slices.json
benchmarks/neural/: README.md  bc-gru256-offset3000-100.csv  bc-gru256-offset3000-100.json  bc-gru384-offset3000-100.csv  bc-gru384-offset3000-100.json  champion-confirmation-a-offset7400-200.csv  champion-confirmation-a-offset7400-200.json  champion-confirmation-b-offset7600-200.csv  champion-confirmation-b-offset7600-200.json  champion-final-7m-500.csv  champion-final-7m-500.episodes.csv  champion-final-7m-500.json  champion-final-8m-500.csv  champion-final-8m-500.episodes.csv  champion-final-8m-500.json  champion-onnx-parity.json  champion-selection-offset4000-100.csv  champion-selection-offset4000-100.json  consolidated-fast-ops-validation-a-100.csv  consolidated-fast-ops-validation-a-100.json  consolidated-fast-ops-validation-b-100.csv  consolidated-fast-ops-validation-b-100.json  dagger-r1-offset3200-100.csv  (+9 more)
models/: ghostline-security.pt  model-card.md
scripts/: benchmark_ghostline.py  build_web.py  calibrate_teacher.py  diagnose_teacher_validation.py  evaluate_validation_policy.py  fuzz_ghostline_levels.py  plot_neural_lineage.py  qa_locomotion.py  qa_scaled_visuals.py  trace_teacher_episode.py  verify_clean_install.py  verify_release_evidence.py  verify_security_release_evidence.py  verify_source_archive.py
tests/: test_cli.py  test_collision_visibility.py  test_env.py  test_exporting.py  test_final_evaluation_audit.py  test_ghostline.py  test_ghostline_rl.py  test_ghostline_v3.py  test_ppo_safeguards.py  test_presentation_accessibility.py  test_recording.py  test_release.py  test_release_evidence.py  test_security_release_evidence.py  test_training.py  test_validation_policy_evaluator.py  test_web_release.py  test_web_static_audit.py
web/: ghostline.tmpl  main.py  runtime.py
wiki/: assets.md  implementation.md  index.md  log.md  setup.md  training.md  web-deployment.md
(+87 files in other folders)
