[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostline"
version = "1.0.0"
description = "A procedural stealth-infiltration game and reinforcement-learning benchmark."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
requires-python = ">=3.12,<3.15"
keywords = ["reinforcement-learning", "pygame", "gymnasium", "procedural-generation", "stealth-game"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Games/Entertainment",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium==1.3.0",
  "numpy==2.5.1",
  "pygame-ce==2.5.7",
]

[project.optional-dependencies]
agent = [
  "onnxruntime==1.27.0",
]
dev = [
  "build==1.5.1",
  "imageio==2.37.3",
  "imageio-ffmpeg==0.6.0",
  "onnx==1.22.0",
  "onnxruntime==1.27.0",
  "pettingzoo==1.26.1",
  "pip-tools==7.5.3",
  "pytest==9.1.1",
  "tensorboard==2.21.0",
  "torch==2.13.0",
]
train = [
  "pettingzoo==1.26.1",
  "tensorboard==2.21.0",
  "torch==2.13.0",
  "tqdm==4.68.4",
]
marl = [
  "pettingzoo==1.26.1",
  "tensorboard==2.21.0",
  "torch==2.13.0",
  "tqdm==4.68.4",
]
media = [
  "imageio==2.37.3",
  "imageio-ffmpeg==0.6.0",
]
build = [
  "onnx==1.22.0",
  "onnxruntime==1.27.0",
  "pyinstaller==6.21.0",
]
web = [
  "onnx==1.22.0",
  "pygbag==0.9.3",
]

[project.scripts]
ghostline = "ghostline.cli:main"

[project.urls]
Homepage = "https://github.com/aswanth-07/ghostline"
Repository = "https://github.com/aswanth-07/ghostline"
Issues = "https://github.com/aswanth-07/ghostline/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ghostline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
